@@ -35,17 +35,13 @@ Rectangle {
         // Get widest and highest dimension from cells:
         var widestCell = 0;
         var heighestCell = 0;
-        for (var i = 0; i < units.count; i++) {
-            units.currentIndex = i;
-            var current = units.currentItem;
-            if (current.height > heighestCell) {
-                heighestCell = current.height;
-            }
+        unitModel.get(0).unitStatus = "MOVING FAST";
 
-            if (current.width > widestCell) {
-                widestCell = current.width;
-            }
-        }
+        units.currentIndex = 0;
+        var current = units.currentItem;
+        widestCell = current.width;
+        heighestCell = current.height;
+        unitModel.get(0).unitStatus = "READY";
 
         // Set all elements' dimentions
         for (var i = 0; i < units.count; i++) {
@@ -121,6 +117,7 @@ Rectangle {
         anchors.topMargin: 2
         anchors.leftMargin: 2
         interactive: false
+//        flickableDirection: Flickable.VerticalFlick
 
         anchors.top: parent.top
         anchors.left: parent.left
